--- a/web/src/app/header/header.component.html
+++ b/web/src/app/header/header.component.html
@@ -12,6 +12,9 @@
         <li class="nav-item" *ngIf="this.authService.isAdmin()" routerLinkActive="active">
           <a class="nav-link" style="cursor: pointer;" [routerLink]="['/employees']">Employees</a>
         </li>
+        <li class="nav-item" *ngIf="this.authService.isAdmin()" routerLinkActive="active">
+          <a class="nav-link" style="cursor: pointer;" [routerLink]="['/archives']">Archives</a>
+        </li>
         <li class="nav-item" *ngIf="this.authService.isUser() || this.authService.isAdmin()" routerLinkActive="active">
           <a class="nav-link" style="cursor: pointer;" [routerLink]="['/profile']">Profile</a>
         </li>
