--- a/web/src/app/tasks/task-list/task-list.component.html
+++ b/web/src/app/tasks/task-list/task-list.component.html
@@ -1,6 +1,6 @@
 <div class="card mb-4 shadow border-0 rounded-0" *ngFor="let task of taskList">
   <div class="card-body mb-0">
-    <button type="button" class="close text-danger" aria-label="Close" style="outline: none;" (click)="onDeleteTask(task.id)"><span aria-hidden="true">&times;</span></button>
+    <button type="button" class="close text-danger" aria-label="Close" style="outline: none;" (click)="onDeleteTask(task.id)" *ngIf="!isEdit"><span aria-hidden="true">&times;</span></button>
     <p class="card-title h5">{{task.name}}</p>
     <hr>
     <p class="h6">Description:</p>
