--- a/web/src/app/employees/employee-profile/employee-profile.component.html
+++ b/web/src/app/employees/employee-profile/employee-profile.component.html
@@ -12,7 +12,7 @@
             <p>{{employee.name}}</p>
             <p class="h6">Email:</p>
             <p>{{employee.email}}</p>
-            <button class="btn btn-dark rounded-0">Edit account info</button>
+            <button class="btn btn-dark rounded-0" (click)="onEdit()">Edit account info</button>
           </div>
         </div>
       </div>
