--- a/web/src/app/register/register.component.html
+++ b/web/src/app/register/register.component.html
@@ -29,6 +29,7 @@
                   <div class="form-group">
                     <label for="name">Full name:</label>
                     <input type="text" id="name" formControlName="name" class="form-control rounded-0">
+                    <span class="text-danger" *ngIf="isEmptyField('name')">Invalid name</span>
                   </div>
                 </div>
               </div>
@@ -37,6 +38,7 @@
                   <div class="form-group">
                     <label for="email">Email:</label>
                     <input type="email" id="email" formControlName="email" class="form-control rounded-0">
+                    <span class="text-danger" *ngIf="isEmptyField('email')">Invalid email</span>
                   </div>
                 </div>
               </div>
