--- a/web/src/styles.css
+++ b/web/src/styles.css
@@ -4,3 +4,8 @@
   border-color: #007BFF;
   box-shadow: none !important;
 }
+
+.modal-content {
+  border: 0 !important;
+  border-radius: 0 !important;
+}
